err/image-funcut.err
Listing '.'...
Listing './bin'...
Compiling './bin/frame_viewer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (frame_viewer.py, line 195)
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/image_funcut-0.0.25.egg-info'...
Listing './lib/python3.5/site-packages/imfun'...
Compiling './lib/python3.5/site-packages/imfun/MLFImage.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (MLFImage.py, line 38)
Compiling './lib/python3.5/site-packages/imfun/atrous.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (atrous.py, line 60)
Compiling './lib/python3.5/site-packages/imfun/bwmorph.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (bwmorph.py, line 34)
Compiling './lib/python3.5/site-packages/imfun/cluster.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cluster.py, line 80)
Compiling './lib/python3.5/site-packages/imfun/emd.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (emd.py, line 15)
Compiling './lib/python3.5/site-packages/imfun/filt.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (filt.py, line 62)
Compiling './lib/python3.5/site-packages/imfun/fnmap.py'...
***   File "./lib/python3.5/site-packages/imfun/fnmap.py", line 136
    print "mean wavelet power %e too low"%np.mean(ma)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imfun/fnutils.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (fnutils.py, line 17)
Compiling './lib/python3.5/site-packages/imfun/fseq.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (fseq.py, line 55)
Compiling './lib/python3.5/site-packages/imfun/leica.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (leica.py, line 97)
Compiling './lib/python3.5/site-packages/imfun/lib.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (lib.py, line 43)
Compiling './lib/python3.5/site-packages/imfun/multiscale.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (multiscale.py, line 40)
Compiling './lib/python3.5/site-packages/imfun/mvm.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (mvm.py, line 56)
Compiling './lib/python3.5/site-packages/imfun/opt.py'...
***   File "./lib/python3.5/site-packages/imfun/opt.py", line 10
    def gaussian(x, (a, b, c,f)):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imfun/pca.py'...
***   File "./lib/python3.5/site-packages/imfun/pca.py", line 23
    print 'PCA - compact trick used'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/imfun/pica.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pica.py, line 150)
Compiling './lib/python3.5/site-packages/imfun/som.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (som.py, line 35)
Compiling './lib/python3.5/site-packages/imfun/synthdata.py'...
***   File "./lib/python3.5/site-packages/imfun/synthdata.py", line 49
    def regular_spikes(tvec, stim_freq, (stim_start, stim_stop), amp=10, tau=0.15, rise=20):
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/imfun/ui.py'...
***   File "./lib/python3.5/site-packages/imfun/ui.py", line 98
    v = [np.array(p, ndmin=2).T for p in p1,p2]
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
